<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_pusat_bantuan">Pusat Bantuan</string>
    <string name="label_feedback">Masukan dan Saran</string>
    <string name="label_policy">Kebijakan dan Privasi</string>
    <string name="label_driver_id">Driver ID</string>
    <string name="label_detail_kontak">Detail Kontak</string>
    <string name="label_tanggal_lahir">Tanggal Lahir</string>
    <string name="title_navigation_detail">Detail Akun</string>
    <string name="label_success_update">Berhasil Update Data</string>
    <string name="label_perbarui_password">Perbarui Password</string>
    <string name="label_success_update_password">Sukses Ganti Password, Silakan Login</string>
    <string name="label_success_feedback">Terima kasih telah memberikan tanggapan kamu</string>
    <string name="label_feedback_again">Tinggalkan tanggapan lain</string>
    <string name="label_feedback_thank">Terima Kasih Banyak,</string>
    <string name="hint_comment">masukkan tanggapan kamu disini…</string>
    <string name="label_feedback_app">Berikan tanggapan mu mengenai aplikasi Kiri agar menjadi lebih baik lagi</string>
    <string name="title_feedback">Kami butuh tanggapanmu</string>
</resources>